--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -44,7 +44,13 @@
                     },
                     success: function (data) {
                         if (data['status'] == 'success') {
-                            alert('장바구니에 성공적으로 담겼습니다.');
+                            $('.cart-confirm-modal').show();
+                            $('.cart-confirm-modal-btn.yes').on('click', function () {
+                                window.location.href = '/dashboard/purchase/cart';
+                            })
+                            $('.cart-confirm-modal-btn.no').on('click', function () {
+                                $('.cart-confirm-modal').hide();
+                            })
                         } else if (data['status'] == 'already_exist') {
                             alert('이미 장바구니에 있습니다.');
                         } else {
@@ -287,14 +293,14 @@
                         <div class="product-select-list">
                             {% if product.manuscript_available %}
                             <div class="product-select-item manuscript">
-                                <input type="checkbox" name="test" value="manuscript-available" id="add-manuscript-price"/>
+                                <input type="checkbox" name="manuscript-available" value="manuscript-available" id="add-manuscript-price"/>
                                 <span>원고가능</span>
                                 <span id="product-manuscript-price">+{{ product.manuscript_price }}원</span>
                             </div>
                             {% endif %}
                             {% if product.highrank_available %}
                             <div class="product-select-item highrank">
-                                <input type="checkbox" name="test" value="test_val" id="add-highrank-price"/>
+                                <input type="checkbox" name="highrank-available" value="highrank-available" id="add-highrank-price"/>
                                 <span>상위노출</span>
                                 <span id="product-highrank-price">+{{ product.highrank_price }}원</span>
                             </div>
@@ -308,8 +314,9 @@
                     <div class="product-button">
                         <div class="wish-list-modal">
                             <div class="wish-list-modal-content">
-                                <div class="wish-list-modal-content-top">찜하기가 되었습니다.</div>
-                                <a href="#" >전체 목록 보기</a>
+                                <button class="wish-list-modal-btn-close" ><img src="/static/img/cancle.png" style="width:100%;"></button>
+                                <div class="wish-list-modal-content-top"><span style="color:hotpink">찜하기</span>가 되었습니다.</div>
+                                <a href="#" class="wish-list-modal-btn-list">전체 목록 보기</a>
                             </div>
                         </div>
                             <button class="wish-list">
@@ -324,6 +331,18 @@
                                 찜하기
                             </button>
                         {% csrf_token %}
+                        <div class="cart-confirm-modal">
+                            <button class="cart-confirm-modal-btn-close" ><img src="/static/img/cancle.png" style="width:100%;"></button>
+                            <div class="cart-confirm-modal-title">장바구니 담기 완료</div>
+                            <div class="cart-confirm-modal-content">
+                                상품이 장바구니에 담겼습니다.<br>바로 확인하시겠습니까?
+                            </div>
+                            <div class="cart-confirm-modal-btns">
+                                <button class="cart-confirm-modal-btn yes">예</button>
+                                <button class="cart-confirm-modal-btn no">아니오</button>
+                            </div>
+
+                        </div>
                         <button class="cart">장바구니</button>
                         <button class="purchase">바로구매</button>
                     </div>
