solve the '~' problem by removeing related js code

--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -136,7 +136,7 @@
                             </ul>
                             <div class="cash">
                                 <span style="font-size:1.5em; color:grey;">
-                                    {{ product.price }}원 여기
+                                    {{ product.price }}원
                                     {% if product.manuscript_price > 0 or product.highrank_price > 0 %}
                                         ~
                                     {% endif %}
