--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -135,7 +135,7 @@
                                 </div>
                             </ul>
                             <div class="cash">
-                                <span style="font-size:1.5em; color:grey;">
+                                <span class="cash-price" style="font-size:1.5em; color:grey;">
                                     {{ product.price }}원
                                     {% if product.manuscript_price > 0 or product.highrank_price > 0 %}
                                         ~
