--- a/static/css/product_detail.css
+++ b/static/css/product_detail.css
@@ -1103,3 +1103,55 @@ li:nth-child(5) .circle-text {
     border:1px solid #648efc;
     color:white;
 }
+
+/* caution-part */
+#caution-image{
+    width:100%;
+}
+
+#caution-ul{
+    list-style-type: none;
+    height:90px;
+    padding-left:15px;
+}
+
+#caution-ul li{
+    float:left;
+    margin-right:4px;
+}
+
+.caution-div-each{
+    text-align:center;
+    font-weight:bold;
+    color:#5a5a5a;
+}
+
+.caution-div-each .caution-div-num{
+    color: #648efc;
+    font-size:30px;
+}
+
+#caution-ul li:nth-child(1) div{
+    width:123px;
+    margin-right:7px;
+}
+
+#caution-ul li:nth-child(2) div{
+    width:117px;
+    margin-right:22px;
+}
+
+#caution-ul li:nth-child(3) div{
+    width:100px;
+    margin-right:25px;
+
+}
+
+#caution-ul li:nth-child(4) div{
+    width:117px;
+    margin-right:15px;
+}
+
+#caution-ul li:nth-child(5) div{
+    width:100px;
+}
