--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -222,7 +222,7 @@
                     <div class="product-category">
                         {% for tag in product_tag %}
                             <div class="product-tag-each">
-                                <img class="product-category-image" src="/static/img/{{ tag }}.png">
+                                <img class="product-category-image" src="/static/img/{{ tag }}_click.png">
                                 <span class="product-category-text">{{ tag.get_tag_display }}</span>
                             </div>
                         {% endfor %}
