--- a/static/css/dashboard/wishlist.css
+++ b/static/css/dashboard/wishlist.css
@@ -144,3 +144,354 @@
     padding-bottom: 100px;
     border-bottom: 1px solid #DEDEDE;
 }
+
+
+/* new list like home */
+
+.list-card {
+    float: left;
+    width: 32%;
+    height: 265px;
+    background: white;
+    margin-right: 18px;
+    padding-bottom: 10px;
+    cursor: pointer;
+    position: relative;
+    border: 1px solid #DADADA;
+}
+
+.list-card.last {
+    margin-right: 0;
+}
+
+.list-card.card-last {
+    margin-right: 0;
+}
+
+.card-subtitle {
+    margin-top: 3px;
+}
+
+.list-card .card-price {
+    float: right;
+    position: absolute;
+    top: 10px;
+    right: -5px;
+    z-index: 4;
+    background: #648efc;
+    padding-top: 3px;
+    padding-bottom: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.list-card .card-price-back {
+    float: right;
+    position: absolute;
+    top: 31px;
+    right: -5px;
+    z-index: 1;
+    width: 5px;
+    height: 10px;
+    background: #3D3D3D;
+}
+
+.list-card .card-image {
+    position: relative;
+    width: 225px;
+    height: 172px;
+}
+
+.list-card .card-image img {
+    width: 225px;
+    height: 172px;
+}
+
+.list-card .card-main-info .card-type {
+    position: relative;
+		float: left;
+}
+
+.list-card .card-main-info .card-type .product-type-image{
+    margin-top:4px;
+    margin-right:8px;
+}
+
+.list-card .card-main-info {
+    height: 180px;
+    /*width: 266px;*/
+    padding: 13px 15px 22px 15px;
+    /*text-align: center;*/
+}
+
+.list-card .card-main-info .card-title {
+    font-size: 11px;
+    font-weight: 600;
+    height:3em;
+    text-align:center;
+    line-height: 20px;
+    color: #333;
+    z-index: 10;
+    margin-top:3px;
+    overflow:hidden;
+}
+
+.list-card .card-main-info .socialup-gauge {
+    position: absolute;
+    top: 85px;
+    left: 30px;
+    z-index: 9;
+}
+
+.list-card .card-main-info .product-price {
+    border: 1px solid #DADADA;
+    border-radius: 5px;
+    background: white;
+    margin-top: 75px;
+    overflow: hidden;
+    position: relative;
+    min-width: 80px;
+    display: inline-block;
+    text-align: center;
+    padding: 5px 15px 5px 15px;
+    z-index: 11;
+    color: #555;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.list-card .card-info {
+    height: 46px;
+    padding: 10px 15px 0px 15px;
+    margin-top: 3px;
+    font-size: 12px;
+    font-weight: 600;
+    border-top: 1px solid #DADADA;
+    color: #333;
+    background: #F2F2F2;
+}
+
+.list-card .card-author {
+    font-size: 13px;
+    color: #777777;
+    font-weight: 400;
+    /*position: absolute;*/
+    /*bottom: 10px;*/
+    width: 100%;
+    background: #D2D2D2;
+}
+
+.list-card .card-author img {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.list-card .card-author span {
+    margin-top: 8px;
+    margin-left: 10px;
+    float: right;
+}
+
+.list-card .card-author .card-author-info {
+    float: left;
+}
+
+.list-card .card-author .card-author-info-rating {
+    float: right;
+    margin-top: 8px;
+    /*right: 30px;*/
+    /*position: absolute;*/
+}
+
+.list-card .card-author .card-author-info-rating i {
+    font-size: 14px;
+    color: #999;
+}
+
+.list-card .card-author .card-author-info-rating i.active {
+    color: #FEDD43;
+}
+
+.row {
+    height: 330px;
+}
+
+/* social gauge part */
+#circle{
+	position:relative;
+  height:45px;
+  width:90px;
+  border-radius: 90px 90px 0 0;
+  -moz-border-radius: 90px 90px 0 0;
+  -webkit-border-radius: 90px 90px 0 0;
+  background:green;
+}
+
+.circle-wrapper{
+	width:300px;
+	height:150px;
+    margin-top:5px;
+    margin-left:5px;
+	/*background-color:grey;*/
+}
+/* arrow for 1 */
+/*
+#arrow{
+	position:relative;
+	left:30;
+	top:90;
+	transform: rotate(15deg);
+}
+*/
+/* arrow for 2 */
+/*
+#arrow{
+	position:relative;
+	left:21%;
+	top:30;
+	transform: rotate(45deg);
+}
+*/
+/* arrow for 3 */
+/*
+#arrow{
+	position:relative;
+	left:45%;
+	top:0;
+	transform: rotate(90deg);
+}
+*/
+/* arrow for 4 */
+/*
+#arrow{
+	position:relative;
+	left:70%;
+	top:30;
+	transform: rotate(135deg);
+}
+*/
+/* arrow for 5 */
+/*
+.circle-arrow{
+	position:relative;
+	left:10%;
+	top:3.5em;
+	transform: rotate(160deg);
+}
+*/
+/* default arrow */
+
+.circle-arrow{
+	position:relative;
+	left:0;
+	top:0;
+	/*transform: rotate(160deg);*/
+}
+/*
+*/
+/* ul tag circle */
+.circle {
+  position: relative;
+  /*border: 1px solid black;*/
+  padding: 0;
+  /*margin: 1em auto;*/
+  /*margin: 1em 1em 0 3em;*/
+	margin-left:5%;
+  width: 100px;
+  height: 50px;
+  border-radius: 100px 100px 0 0;
+  list-style: none;
+  overflow: hidden;
+}
+.circle-list {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  transform-origin: 0% 100%;
+}
+.circle-text {
+  position: absolute;
+  left: -100%;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  transform: skewY(36deg) rotate(18deg);
+  padding-top: 20px;
+  border-radius: 90px 90px 0 0;
+  -moz-border-radius: 90px 90px 0 0;
+  -webkit-border-radius: 90px 90px 0 0;
+}
+.circle-list:first-child {
+  transform: rotate(270deg) skewY(-36deg);
+}
+.circle-list:nth-child(2) {
+  transform: rotate(306deg) skewY(-36deg);
+}
+.circle-list:nth-child(3) {
+  transform: rotate(342deg) skewY(-36deg);
+}
+.circle-list:nth-child(4) {
+  transform: rotate(18deg) skewY(-36deg);
+}
+.circle-list:nth-child(5) {
+  transform: rotate(54deg) skewY(-36deg);
+}
+li:first-child .circle-text {
+	padding-top:2%;
+	color:black;
+    background: #cecece;
+}
+li:nth-child(2) .circle-text {
+	padding-top:2%;
+	color:black;
+    background: #cecece;
+}
+li:nth-child(3) .circle-text {
+	padding-top:2%;
+	color:black;
+    background: #cecece;
+}
+li:nth-child(4) .circle-text {
+	padding-top:2%;
+	color:black;
+    background: #cecece;
+}
+li:nth-child(5) .circle-text {
+	padding-top:2%;
+	color:black;
+    background: #cecece;
+}
+.circle-mask2{
+	position:absolute;
+	bottom:0;
+	left:17%;
+    height:66%;
+    width:66%;
+    text-align:center;
+    margin-top:2em;
+    border-radius: 200px 200px 0 0;
+    -moz-border-radius: 200px 200px 0 0;
+    -webkit-border-radius: 200px 200px 0 0;
+    background:white;
+	z-index:3;
+}
+.circle-mask2-text{
+  padding-top:1em;
+}
+
+.cash{
+  position:relative;
+  width:60%;
+  height:18%;
+  padding-top:3%;
+  border:1px solid grey;
+  border-radius:15px;
+  text-align:center;
+}
