make cart list purchase available with new cart view

--- a/static/css/dashboard/cart.css
+++ b/static/css/dashboard/cart.css
@@ -380,3 +380,11 @@ li:nth-child(5) .circle-text {
     text-align: right;
     width:100%;
 }
+
+/* cart-item-btns-ul */
+.dashboard-cart-btns-ul{
+    list-style-type: none;
+}
+.dashboard-cart-btns-ul li{
+    float:left;
+}
