--- a/templates/account/dashboard_base.html
+++ b/templates/account/dashboard_base.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li id="header-wish"><a href="{% url 'wish_list' %}">위시리스트 <span>({{ user.id|user_wish_count }})</span></a></li>
                     <li id="header-cart"><a href="{% url 'cart' %}">장바구니 <span>({{ request.session.cart_id|user_cart_count }})</span></a></li>
-                    <li id="header-buy"><a href="{% url 'purchase_list' %}">구매내역 <span>(0)</span></a></li>
+                    <li id="header-buy"><a href="{% url 'purchase_list' %}">구매내역 <span>({{ user.id|user_purchase_count }})</span></a></li>
                 </ul>
             </div>
         </div>
