--- a/templates/account/dashboard_purchase_list.html
+++ b/templates/account/dashboard_purchase_list.html
@@ -66,7 +66,7 @@
         <div class="dashboard-purchase-list">
             <div class="purchase-list-nav">
                 <ul>
-                    <li class="active status_0_menu">전체({{ list|length }})</li>
+                    <li class="active status_0_menu">전체({{ orders|length }})</li>
                     <li class="status_1_menu">작업대기({{ status_0 }})</li>
                     <li class="status_2_menu">작업진행({{ status_1 }})</li>
                     <li class="status_3_menu">작업완료({{ status_2 }})</li>
@@ -74,69 +74,55 @@
                 </ul>
             </div>
             <div class="item-list">
-                {% if list %}
+                {% if orders %}
                     <div class="content status_0">
-                        {% for item in list %}
-                            <div class="item">
-                                <div class="image">
-                                    {% for obj in item.cart.items.all %}
-                                        {% if forloop.counter0 == 0 %}
-                                            <img src="{{ obj.product.get_image_url }}">
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                                <div class="title">
-                                    {% for obj in item.cart.items.all %}
-                                        {% if forloop.counter0 == 0 %}
-                                            <h3>{{ obj.product.title|truncatechars:27 }}</h3>
-                                            <div class="meta">
-                                                <p class="price">{{ item.order_total }}원</p>
-                                                <p class="date"></p>
+                        {% for order in orders %}
+                            {% for cart_item in order.cart.cartitem_set.all %}
+                                <div class="item">
+                                    <div class="image">
+
+                                    </div>
+                                    <div class="title">
+                                        <h3>{{ cart_item.item.oneline_intro|truncatechars:27 }}</h3>
+                                        <div class="meta">
+                                            <p class="price">{{ cart_item.line_item_total }}원</p>
+                                            <p class="date"></p>
+                                        </div>
+                                    </div>
+
+                                    <div class="seller">
+                                        <p>{{ cart_item.item.seller }}</p>
+                                        <button id="ask-seller" data-id="{{ cart_item.item.seller.user.id }}"
+                                                data-name="{{ cart_item.item.seller }}"
+                                                data-profile="{{ cart_item.item.seller.user.get_avatar }}">
+                                            문의하기
+                                        </button>
+                                    </div>
+                                    <div class="more" data-seller-id="{{ cart_item.item.seller.user }}">
+                                        <i class="fa fa-angle-down" aria-hidden="true"></i>
+                                    </div>
+                                    <div class="item-info">
+                                        <div class="purchase-info">
+                                            <p>주문번호 {{ order.order_id }}</p>
+                                            <p>판매자 {{ cart_item.item.seller }}</p>
+                                            <p>결제금액 <span class="money">{{ cart_item.line_item_total }}원</span></p>
+                                            <p>결제 수단
+                                                {% if order.type == 'card' %}
+                                                    신용카드
+                                                {% elif order.type == 'phone' %}
+                                                    휴대폰결제
+                                                {% endif %}
+                                            </p>
+                                            <p>결제 날짜 {{ order.created }}</p>
+                                        </div>
+                                        <div class="message">
+                                            <div class="chat-canvas">
+
                                             </div>
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-
-                                {% for obj in item.cart.items.all %}
-                                    {% if forloop.counter0 == 0 %}
-                                        <div class="seller">
-                                            <p>{{ obj.product.seller }}</p>
-                                            <button id="ask-seller" data-id="{{ obj.product.seller.user.id }}"
-                                                    data-name="{{ obj.product.seller }}"
-                                                    data-profile="{{ obj.product.seller.user.get_avatar }}">
-                                                문의하기
-                                            </button>
-                                        </div>
-                                        <div class="more" data-seller-id="{{ obj.product.seller.user }}">
-                                            <i class="fa fa-angle-down" aria-hidden="true"></i>
-                                        </div>
-                                    {% endif %}
-                                {% endfor %}
-                                <div class="item-info">
-                                    <div class="purchase-info">
-                                        {% for obj in item.cart.items.all %}
-                                            {% if forloop.counter0 == 0 %}
-                                                <p>주문번호 {{ item.order_id }}</p>
-                                                <p>판매자 {{ obj.product.seller }}</p>
-                                                <p>결제금액 <span class="money">{{ item.order_total }}원</span></p>
-                                                <p>결제 수단
-                                                    {% if item.type == 'card' %}
-                                                        신용카드
-                                                    {% elif item.type == 'phone' %}
-                                                        휴대폰결제
-                                                    {% endif %}
-                                                </p>
-                                                <p>결제 날짜 {{ item.created }}</p>
-                                            {% endif %}
-                                        {% endfor %}
-                                    </div>
-                                    <div class="message">
-                                        <div class="chat-canvas">
-
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            {% endfor %}
                         {% endfor %}
                     </div>
                     <div class="content status_1" style="display:none;">
