--- a/templates/header.html
+++ b/templates/header.html
@@ -34,7 +34,7 @@
             {% endif %}
             <div class="header-menu">구매<span><i class="fa fa-caret-down" aria-hidden="true"></i></span></div>
             <div class="header-sub-menu buyer">
-                <a href="{% url 'wish_list' %}">- 위시리스트</a>
+                <a href="{% url 'wish_list' %}">- 찜목록</a>
                 <a href="{% url 'cart' %}">- 장바구니</a>
                 <a href="{% url 'purchase_list' %}">- 구매관리</a>
             </div>
