--- a/templates/product/product_detail.html
+++ b/templates/product/product_detail.html
@@ -324,7 +324,7 @@
                             <div class="wish-list-modal-content">
                                 <button class="wish-list-modal-btn-close" ><img src="/static/img/cancle.png" style="width:100%;"></button>
                                 <div class="wish-list-modal-content-top"><span style="color:hotpink">찜하기</span>가 되었습니다.</div>
-                                <a href="#" class="wish-list-modal-btn-list">전체 목록 보기</a>
+                                <a href="{% url 'wish_list' %}" class="wish-list-modal-btn-list">전체 목록 보기</a>
                             </div>
                         </div>
                             <button class="wish-list">
