--- a/static/css/dashboard/cart.css
+++ b/static/css/dashboard/cart.css
@@ -4,7 +4,6 @@
 
 .dashboard-cart .dashboard-cart-item {
     padding-top: 15px;
-    padding-bottom: 15px;
     padding-left: 18px;
     border-bottom: 1px solid #F2F2F2;
     position: relative;
@@ -51,22 +50,27 @@
 
 .dashboard-cart .dashboard-cart-item .dashboard-cart-item-seller {
     display: inline-block;
-    position: absolute;
     right: 60px;
-    margin-top: 10px;
+    margin-left:2%;
+    margin-top: 35px;
     vertical-align: top;
     text-align: center;
     font-size: 14px;
     color: rgba(0, 0, 0, .5);
 }
 
+.dashboard-cart .dashboard-cart-item .dashboard-cart-item-seller p{
+    font-size:16px;
+}
+
 .dashboard-cart .dashboard-cart-item .dashboard-cart-item-seller button {
-    padding: 3px 10px 3px 10px;
+    width:75px;
+    height:33px;
     margin-top: 5px;
     font-size: 12px;
-    background: transparent;
-    border: 1px solid rgba(0, 0, 0, .5);
-    color: rgba(0, 0, 0, .5);
+    background: #898989;
+    border: 1px solid #898989;
+    color: white;
 }
 
 .dashboard-cart .dashboard-cart-item .dashboard-cart-item-more {
@@ -381,10 +385,48 @@ li:nth-child(5) .circle-text {
     width:100%;
 }
 
-/* cart-item-btns-ul */
+/* cart-item-btns */
+.dashboard-cart-btns{
+    position:relative;
+    display: block;
+    width:50%;
+    border: 1px solid rgba(0, 0, 0, .5);
+    left:25%;
+    top:-25px;
+    height:25px;
+    font-size: 13px;
+}
+
 .dashboard-cart-btns-ul{
     list-style-type: none;
 }
 .dashboard-cart-btns-ul li{
     float:left;
+}
+
+.dashboard-cart-btns-ul li:nth-child(1) {
+    margin-left:17%;
+    position: relative;
+    top:5px;
+}
+
+.dashboard-cart-btns-ul li:nth-child(1) input{
+    width:60px;
+}
+
+.dashboard-cart-btns-ul li:nth-child(2) {
+    margin-right:17%;
+    float:right;
+    position: relative;
+    top:5px;
+}
+
+.dashboard-cart-btns-ul li:nth-child(2) input{
+    background:none;
+}
+
+/* dashboard-card-total */
+.dashboard-cart-subtotal #money{
+    color:#648efc;
+    font-weight:normal;
 }
