--- a/static/css/dashboard/wishlist.css
+++ b/static/css/dashboard/wishlist.css
@@ -148,9 +148,20 @@
 
 /* new list like home */
 
+.list-card-wrapper{
+    float:left;
+    width:31%;
+    height:100%;
+    margin-right: 16px;
+}
+
+.list-card-wrapper:nth-child(3){
+    margin-right: 0px;
+}
+
 .list-card {
     float: left;
-    width: 30%;
+    width: 100%;
     height: 222px;
     background: white;
     margin-right: 16px;
@@ -161,11 +172,11 @@
 }
 
 .list-card.last {
-    margin-right: 0;
+    margin-right: 0px;
 }
 
 .list-card.card-last {
-    margin-right: 0;
+    margin-right: 0px;
 }
 
 .card-subtitle {
@@ -264,13 +275,15 @@
 }
 
 .list-card .card-info {
+    width:86%;
+    position:relative;
+    left:7%;
     height: 40px;
-    padding: 3px 15px 0px 15px;
     margin-top: 3px;
     font-size: 12px;
     font-weight: 600;
     border-top: 1px solid #DADADA;
-    color: #333;    background: #F2F2F2;
+    color: #333;
 
 }
 
@@ -490,4 +503,37 @@ li:nth-child(5) .circle-text {
   border:1px solid grey;
   border-radius:15px;
   text-align:center;
+}
+
+/* card btns css */
+.card-btns-wrapper{
+    position: relative;
+    clear:left;
+    top:15px;
+    width:100%;
+    height:30px;
+    color:#cecece;
+    font-size:14px;
+    border:1px solid #cecece;
+}
+
+.card-btns-wrapper ul{
+    list-style: none;
+}
+
+.card-btns-wrapper ul li{
+    float:left;
+    padding-top:4%;
+}
+
+.card-btns-wrapper ul li:nth-child(1){
+    margin-left:10%;
+}
+.card-btns-wrapper ul li:nth-child(2){
+    float:right;
+    margin-right:10%;
+}
+
+.card-btns-wrapper ul li button{
+    background : none;
 }
