--- a/templates/account/dashboard_cart.html
+++ b/templates/account/dashboard_cart.html
@@ -60,7 +60,7 @@
         <div class="dashboard-info">
             <div class="dashboard-info-summary info-order-wish">
                 <div class="dashboard-info-summary-title">
-                    위시리스트
+                    찜목록
                 </div>
                 <div class="dashboard-info-summary-count">
                     <a href="{% url 'wish_list' %}" class="dashboard-info-img">
@@ -92,42 +92,42 @@
         <div class="dashboard-cart">
             {% if object.item %}
                 {% for cartitem in object.item %}
-                    <div class="dashboard-cart-item">
+                    <div class="dashboard-cart-item" data-type="{{ cartitem.0.item.sns_type }}" data-color="{{ cartitem.0.item.sns_type_color }}">
                         <div class="dashboard-cart-item-image">
                             <div class="circle-wrapper">
-                                    <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
-                                    <ul class="circle">
-                                        <li class="circle-list">
-                                            <div class="circle-text">1</div>
-                                        </li>
-                                        <li class="circle-list">
-                                            <div class="circle-text">2</div>
-                                        </li>
-                                        <li class="circle-list">
-                                            <div class="circle-text">3</div>
-                                        </li>
-                                        <li class="circle-list">
-                                            <div class="circle-text">4</div>
-                                        </li>
-                                        <li class="circle-list">
-                                            <div class="circle-text">5</div>
-                                        </li>
-                                        <div class="circle-mask2">
-                                            <div class="circle-mask2-text">
-                                                <span style="font-size:1.3em;">50</span>
-                                                <span style="font-size:1em;">원</span>
-                                            </div>
+                                <img class="circle-arrow" src="/static/img/arrow_gauge.png" >
+                                <ul class="circle">
+                                    <li class="circle-list">
+                                        <div class="circle-text">1</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">2</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">3</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">4</div>
+                                    </li>
+                                    <li class="circle-list">
+                                        <div class="circle-text">5</div>
+                                    </li>
+                                    <div class="circle-mask2">
+                                        <div class="circle-mask2-text">
+                                            <span style="font-size:1.3em;">50</span>
+                                            <span style="font-size:1em;">원</span>
                                         </div>
-                                    </ul>
-                                    <div class="cash">
-                                        <span class="cash-price" style="font-size:1em; color:grey;" data-price="{{ cartitem_product.1.price }}">
-                                            <span class="item-money">{{ cartitem.0.item.price }}</span>원
-                                            {% if cartitem.0.item.manuscript_price > 0 or cartitem.0.item.highrank_price > 0 %}
-                                                ~
-                                            {% endif %}
-                                        </span>
                                     </div>
+                                </ul>
+                                <div class="cash">
+                                    <span class="cash-price" style="font-size:1em; color:grey;" data-price="{{ cartitem_product.1.price }}">
+                                        <span class="item-money">{{ cartitem.0.item.price }}</span>원
+                                        {% if cartitem.0.item.manuscript_price > 0 or cartitem.0.item.highrank_price > 0 %}
+                                            ~
+                                        {% endif %}
+                                    </span>
                                 </div>
+                            </div>
                         </div>
                         <div class="dashboard-cart-item-title">
                             <div class="cart-item" data-id="{{ cartitem.0.item.id }}">
@@ -136,13 +136,13 @@
                             <div class="dashboard-cart-item-meta">
                                 <div class="cart-item-option" manuscript_available="{{ cartitem.0.manuscript_checked }}" highrank_available="{{ cartitem.0.highrank_checked }}">
                                     {% if cartitem.0.manuscript_checked or cartitem.0.haighrank_checked %}
-                                        [옵션] 원고추가
+                                        [옵션]
                                         {% if cartitem.0.item.manuscript_price != 0 %}
-                                        + <span>{{ cartitem.0.item.manuscript_price }}원</span>
+                                            원고추가 + <span>{{ cartitem.0.item.manuscript_price }}원</span>
                                         {% endif %}
 
                                         {% if cartitem.0.item.highrank_price != 0 %}
-                                            + <span>{{ cartitem.0.item.highrank_price }}원</span>
+                                            ,상위노출 + <span>{{ cartitem.0.item.highrank_price }}원</span>
                                         {% endif %}
                                     {% else %}
                                         [옵션]없음
@@ -159,7 +159,7 @@
                                 문의하기
                             </button>
                         </div>
-                        <div>
+                        <div class="dashboard-cart-btns">
                             <ul class="dashboard-cart-btns-ul">
                                 <li>
                                     {% csrf_token %}
@@ -186,8 +186,8 @@
 
         <div class="dashboard-cart-total">
             <div class="dashboard-cart-subtotal">
-                <p>상품 금액</p>
                 <h1><span id="money">{{ object.cart.subtotal }}</span><span id="unit">원</span></h1>
+                <p>서비스 총 금액(VAT포함)</p>
             </div>
         </div>
         <div class="dashboard-cart-purchase">
