--- a/templates/account/dashboard_sidebar.html
+++ b/templates/account/dashboard_sidebar.html
@@ -35,7 +35,7 @@
         </div>
         <div class="side-menu-content">
             <ul>
-                <li><a href="{% url 'wish_list' %}">- 위시리스트</a></li>
+                <li><a href="{% url 'wish_list' %}">- 찜목록</a></li>
                 <li><a href="{% url 'cart' %}">- 장바구니</a></li>
                 <li><a href="{% url 'purchase_list' %}">- 구매관리</a></li>
             </ul>
